Fix main text width on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -10,16 +10,16 @@ body {
 
 main {
   margin: auto;
-  width: 50%;
+  width: 90%;
+  max-width: 1024px;
 }
 
 .centerimg {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  max-width: 200px;
   text-align: center;
-  max-width:20%;
   height:auto;
   border: 2px solid #404040;
 }
